--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>Yagosp</title>
   <LINK href="styles.css" rel="stylesheet" type="text/css">
-</head>
+</head style"background-color:red;">
 
 <body>
 
