--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>Yagosp</title>
   <LINK href="styles.css" rel="stylesheet" type="text/css">
-</head style"background-color:red;">
+</head>
 
-<body>
+<body style="background-color:red;">
 
 <img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
 
