--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <LINK href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
-<body style="background-color:red;">
+<body>
 
 <img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
 
