--- a/index.html
+++ b/index.html
@@ -1,18 +1,7 @@
-<!DOCTYPE html>
-
 <html>
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>Yagosp</title>
-  <LINK href="styles.css" rel="stylesheet" type="text/css">
-</head>
-
-<body>
-
-<img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
-
-<!-- Change this code here by copy and pasting your template on line 15 -->
-<p>Welcome to your first GitHub Pages website!</p>
-
-</body>
-</html>
+  <meta charset="utf-8">
+  
+  <head>
+    <title>YagoWEB</title>
+    <img src="https://media1.tenor.com/images/4ac44c8eed874188ed4b2babebe78942/tenor.gif?itemid=11205361" width="50%" height="100%"></>
+   
