--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </body>
 
 <footer>
-  <p style="color:cyan;">Instagram; <a style="color:white;" href="https://www.instagram.com/y4g0sp/" Y4g0sp> </a> </p>
+  <a> href="https://www.instagram.com/y4g0sp/" <p style="color:cyan;" </a> </p>
   <p style="color:white;">Criado por YagoSP. 01/11/2020</p>
     
              
