--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </body>
 
 <footer>
-  <a> href="https://www.instagram.com/y4g0sp/" <p style="color:cyan;" </a> </p>
+  <a> href="https://www.instagram.com/y4g0sp/">Instagram </a>
   <p style="color:white;">Criado por YagoSP. 01/11/2020</p>
     
              
