--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </body>
 
 <footer>
-  <a href="https://www.instagram.com/y4g0sp/" target="_blank">Instagram</a>
+  <a href="https://www.youtube.com/watch?v=aE07AI2mwSE" target="_blank">Tag abbr</a>
   <p style="color:white;">Criado por YagoSP. 01/11/2020</p>
     
              
