--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>YagoWEB</title>
     <img src="https://media1.tenor.com/images/4ac44c8eed874188ed4b2babebe78942/tenor.gif?itemid=11205361" height="25%" width="100%"></>
     <h1 style="color:green;"align="center">YagoSP</h1>
-    <img src="https://www.merchandisingplaza.pt/139522/2/Tapetes-Breaking-Bad-Breaking-Bad-Tapete-Heisenberg-80-x-84-cm-l.jpg" height="30%" width="15%"></>
+    <img src="https://www.merchandisingplaza.pt/139522/2/Tapetes-Breaking-Bad-Breaking-Bad-Tapete-Heisenberg-80-x-84-cm-l.jpg" height="30%" width="15%" align="right"></>
   <h2 style="color:green;">Meu primeiro site</h2>
 
 <body style="background-color:black;">
