--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </body>
 
  <footer>
-  <a href="https://www.youtube.com/watch?v=aE07AI2mwSE" target="_blank">Tag abbr</a>
+  <a style="color:red;" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLCD0445C57F2B7F41" target="_blank">Não clique aqui!</a>
   <p style="color:white;">Criado por YagoSP. 01/11/2020</p>
 </html>
              
