--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </body>
 
  <footer>
-  <a style="color:red;" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLCD0445C57F2B7F41" target="_blank"><h1> Não clique aqui!</h1></a>
+  <a style="color:green;" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLCD0445C57F2B7F41" target="_blank"><h1> Não clique aqui!</h1></a>
   <p style="color:white;">Criado por YagoSP. 01/11/2020</p>
 </html>
              
