--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
   <head>
     <title>YagoWEB</title>
-    <img src="images/hrefsystem.jpg" align="center">
+    <img src="images/hrefsystem.jpg" alt="Logo" class="center">
     <h1 style="color:green;"align="center">YagoSP</h1>
     <img src="https://www.merchandisingplaza.pt/139522/2/Tapetes-Breaking-Bad-Breaking-Bad-Tapete-Heisenberg-80-x-84-cm-l.jpg" align="right" height="30%" width="15%" ></>
   <h2 style="color:green;">Meu primeiro site</h2>
