--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Hrefsystem</title>
     <img src="images/hrefsystem.jpg" align="center">
   </head>
-  <body style="background-coloc:black;">
-    <h1>Teste de texto</h1
+  <body style="background-color:black;">
+    <h1>Teste de texto</h1>
       <p style="color:cyan";>HTML TutorialCSS Tutoria</p>
   </body>
 </html>
