--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Hrefsystem</title>
     <img src="images/hrefsystem.jpg" align="center">
   </head>
-  <body style="background-color:black;">
+  <body style="background-color:black";>
     <h1>Teste de texto</h1>
       <p style="color:cyan";>HTML TutorialCSS Tutoria</p>
   </body>
