--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <title>Hrefsystem</title>
     <img src="images/hrefsystem.jpg" align="center">
   </head>
+  
   <body style="background-color:black";>
-    <h1>Teste de texto</h1>
+    <h1 style="color:cyan"; align="center">Teste de texto</h1>
       <p style="color:cyan";>HTML TutorialCSS Tutoria</p>
   </body>
 </html>
