--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   
   <body style="background-color:black";>
-    <h1 style="color:cyan"; align="center">Teste de texto</h1>
+    <h1 style="color:cyan";>Teste de texto</h1>
       <p style="color:cyan";>HTML TutorialCSS Tutoria</p>
   </body>
 </html>
