--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Hrefsystem</title>
-    <img src="images/hrefsystem.jpg" align="center">
+    <img src="images/hrefsystem.jpg align="center">
   </head>
   
   <body style="background-color:black";>
