--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <html>
+<meta charset="utf-8">
   
   <head>
-    <meta charset="utf-8">
-    <title>Hrefsystem</title>
-    <img src="images/hrefsystem.jpg align="center">
+    <title>HrefSystem</title>
+    <img src="images/hrefsystem.jpg" align="center">
   </head>
   
-  <body style="background-color:black";>
-    <h1 style="color:cyan";>Teste de texto</h1>
-      <p style="color:cyan";>HTML TutorialCSS Tutoria</p>
+  </body style="background-color:black">
   </body>
 </html>
+      
