--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <html>
 <meta charset="utf-8">
-
 	<head>
 	<title>Astro</title>
-		<br></br>
-	<img src=""images/hrefsystem.jpg align="center">
+	<img src="images/hrefsystem.jpg" align="center">
 	</head>
 	<body style="background-color:black">
 	</body>	
