--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<title>Astro</title>
 		<br></br>
-	<img src="images/hrefsystem.jpg" align="center">
+	<img src="images/hrefsystem.jpg" align="middle">
 	</head>
 	<body style="background-color:black">
 	</body>	
