--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 	<head>
 	<title>Astro</title>
-	<img src="images/hrefsystem.jpg" align="middle">
+	<img src="images/hrefsystem.jpg" align="center">
 	</head>
 	<body style="background-color:black">
 	</body>	
