--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 <meta charset="utf-8">
 	<head>
-	<title>Astro</title>
-	<img src="images/hrefsystem.jpg" align="center">
+		<title>Astro</title>
+		<img src="images/hrefsystem.jpg" align="center">
 	</head>
 	<body style="background-color:black">
+		<p style="color:cyan;" align="center">Text</p>	
 	</body>	
 </html>
