--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
-<html>
-<meta charset="utf-8">
-	<head>
-		<title>Astro</title>
-		<img src="images/hrefsystem.jpg" align="center">
-	</head>
-	<body style="background-color:black">
-		<p style="color:cyan;" align="center">Text</p>	
-	</body>	
+<!DOCTYPE html>
+	<html lang="pt-br">
+		
+		<head>
+			<meta charset="utf-8">
+			<title>HrefSystem</title>
+				<center>
+					<img src="images/hrefsystemm.jpg">
+				</center>
+		</head>
+		<body style="background-color:black">
+			<h1 style="color:cyan">TCP/IP</h1>
+				<p style="color:cyan">O TCP/IP é um conjunto de protocolos de comunicação entre computadores em rede. Seu nome vem de dois protocolos: o TCP e o IP</p>
+		</body>
+		<footer>
+			<a style="color:red" href="https://discord.com/channels/766851219238944800/766851219238944802">Meu servidor de discord</a>
+			<a style="color:red" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLCD0445C57F2B7F41">NÃO CLIQUE AQUI!</a>
+			<p style="color:cyan">Criado por YagoSP</p>
+		</footer>
 </html>
