--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 				<p style="color:cyan">O TCP/IP é um conjunto de protocolos de comunicação entre computadores em rede. Seu nome vem de dois protocolos: o TCP e o IP</p>
 		</body>
 		<footer>
-			<a style="color:red" href="https://discord.com/channels/766851219238944800/766851219238944802">Meu servidor de discord</a>
-			<a style="color:red" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLCD0445C57F2B7F41">NÃO CLIQUE AQUI!</a>
+			<a style="color:red" href="https://discord.com/channels/766851219238944800/766851219238944802" target="_blank">Meu servidor de discord</a>
+				<br>
+			<a style="color:red" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLCD0445C57F2B7F41" target="_blank">NÃO CLIQUE AQUI!</a>
 			<p style="color:cyan">Criado por YagoSP</p>
 		</footer>
 </html>
