--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
 		
 		<head>
 			<meta charset="utf-8">
-			<title>HrefSystem</title>
-			<link rel="stylesheet" href="style.css"
+			<title>HrefSystem</title>	
 		</head>
 		
 		<body style="background-color:black">
 			<center>
 				<img src="images/hrefsystem.jpg" alt="imagem não encontrada!">
 			</center>
-			<h1 style="color:cyan">TCP/IP</h1>
-				<p style="color:cyan">O TCP/IP é um conjunto de protocolos de comunicação entre computadores em rede. Seu nome vem de dois protocolos: o TCP e o IP</p>
+			<h1 style="color:cyan"></h1>
+				<p style="color:cyan; fontsize:60px;">OLÁ MUNDO</p>
 		</body>
 		
 		<footer>
