--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 		
 		<head>
 			<meta charset="utf-8">
-			<title>HrefSystem</title>	
+			<title>HrefSystem</title>
+			<link rel="stylesheet" href="styles.css">
 		</head>
 		
 		<body style="background-color:black">
 			<center>
 				<img src="images/hrefsystem.jpg" alt="imagem não encontrada!">
 			</center>
-			<h1 style="color:cyan"></h1>
-				<p style="color:cyan; fontsize:100px;">OLÁ MUNDO</p>
 		</body>
 		
 		<footer>
