--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
 		<head>
 			<meta charset="utf-8">
 			<title>HrefSystem</title>
-			<link rel="stylesheet" href="styles.css">
 		</head>
 		
 		<body style="background-color:black">
 			<center>
 				<img src="images/hrefsystem.jpg" alt="imagem não encontrada!">
 			</center>
-			<h1>Text de TEXT</h1>
+			<h1>Text de TEXT-2</h1>
 		</body>
 		
 		<footer>
