--- a/DownHtml.html
+++ b/DownHtml.html
@@ -6,4 +6,7 @@
   </head>
     
     <body style="background-color:black";>
-      <a style="color:cyan";>
+      <a style="color:cyan"; href="SimuladorDigital_095.exe" download="SimuladorDigital.exe" target="_blank">
+    
+        </body>
+      </html>
