--- a/DownHtml.html
+++ b/DownHtml.html
@@ -7,6 +7,8 @@
     
     <body style="background-color:black";>
       <a style="color:cyan" href="SimuladorDigital_095.exe" download="SimuladorDigital_095.exe" target="_blank">Simulador Digital</a>
+      <img src="images/SIMULADOR001.png" height="50%" width="50%">
+      <img src="images/simulador2.png" height="50%" width="50%">
     
         </body>
       </html>
