--- a/SubPages/Downs.html
+++ b/SubPages/Downs.html
@@ -6,10 +6,10 @@
   </head>
     
     <body style="background-color:black";>
-      <a style="color:cyan" href="SimuladorDigital_095.exe" download="SimuladorDigital_095.exe" target="_blank">Simulador Digital</a>
+      <a style="color:cyan" href="Downloads/SimuladorDigital_095.exe" download="SimuladorDigital_095.exe" target="_blank">Simulador Digital</a>
       <img src="images/SIMULADOR001.png" height="50%" width="50%">
       <img src="images/simulador2.png" height="50%" width="50%">
     
-        </body>
-      </html>
+     </body>
+</html>
 
