--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		</body>
 		
 		<footer>
-			<a style="color:cyan"; href="DownHtml.html" target="_blank">Lista De Downloads</a>
+			<a style="color:cyan"; href="SubPages/DownHtml.html" target="_blank">Lista De Downloads</a>
 				<br>
 			<a style="color:red" href="https://discord.com/channels/766851219238944800/766851219238944802" target="_blank">Meu servidor de discord</a>
 				<br>
