--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 				<center>
 					<img src="images/hrefsystem.jpg" alt="imagem não encontrada!">
 				</center>
-			<img src="images/54825415.jpg" height="15%" width="15%" alt="Ímagem não encontrada!">
-			<iframe src="https://discord.com/widget?id=766851219238944800&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+			<iframe src="https://discord.com/widget?id=766851219238944800&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts" align="right"></iframe>
 			<h1>Text de TEXT-2</h1>
 		</body>
 		
