--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
 		</body>
 		
 		<footer>
-			<a style="color:cyan"; href="SubPages/Downs.html" target="_blank">Lista De Downloads</a>
+			<a style="color:cyan" href="SubPages/Downs.html" target="_blank">Lista De Downloads</a>
 				<br>
 			<a style="color:red" href="https://discord.com/channels/766851219238944800/766851219238944802" target="_blank">Meu servidor de discord</a>
 				<br>
 			<a style="color:red" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLCD0445C57F2B7F41" target="_blank">NÃO CLIQUE AQUI!</a>
+				<br>
+			<a style="color:grey"href="SubPages/nobari.html"></a>
 			<p style="color:cyan">Criado por YagoSP</p>
 		</footer>
 </html>
