--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<br>
 			<a style="color:red" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLCD0445C57F2B7F41" target="_blank">NÃO CLIQUE AQUI!</a>
 				<br>
-			<a style="color:grey"href="SubPages/nobari.html"></a>
+			<a style="color:grey"href="SubPages/nobari.html">No Bari</a>
 			<p style="color:cyan">Criado por YagoSP</p>
 		</footer>
 </html>
