--- a/SubPages/nobari.html
+++ b/SubPages/nobari.html
@@ -7,8 +7,9 @@
     </head>
     
     <body style=" background-color:black";>
-      <h1 style="color:grey";> No bari uana ciuas tchu gueda, bari no meri nou</h1>
+      <h1 style="color:grey"; align="center"> No bari uana ciuas tchu gueda, bari no meri nou</h1>
       <center>
         <img src="images/nobari.jpg" alt="No bari uana ciuas tchu gueda, bari no meri nou!">
+        #DELTA 
       </center>
   </html>
