--- a/SubPages/nobari.html
+++ b/SubPages/nobari.html
@@ -8,5 +8,9 @@
     
     <body style=" background-color:black";>
       <h1 style="color:grey"; align="center"> No bari uana ciuas tchu gueda, bari no meri nou</h1>
-        <img src="images/nobari.jpg" alt="No bari uana ciuas tchu gueda, bari no meri nou!"> 
+          <center>
+            <img src="images/nobari.jpg" alt="No bari uana ciuas tchu gueda, bari no meri nou!"> 
+          </center>
+     </body>
+  
   </html>
