--- a/index.html
+++ b/index.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
-	<html lang="pt-br">
+<html lang="pt-br">
+	<meta charset="utf-8'>		
+	<head>
+		<title>HrefSystem</title>
+	</head>
 		
-		<head>
-			<meta charset="utf-8">
-			<title>HrefSystem</title>
-		</head>
+	<body style="background-color:black">
+		<center>
+			<img src="images/hrefsystem.jpg" alt="imagem não encontrada!">
+		</center>
+		<h1>Text de TEXT-2</h1>
+	</body>
 		
-		<body style="background-color:black">
-				<center>
-					<img src="images/hrefsystem.jpg" alt="imagem não encontrada!">
-				</center>
-			<iframe src="https://discord.com/widget?id=766851219238944800&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts" align="right"></iframe>
-			<h1>Text de TEXT-2</h1>
-		</body>
-		
-		<footer>
-			<a style="color:cyan" href="SubPages/Downs.html" target="_blank">Lista De Downloads</a>
+	<footer>
+		<a style="color:cyan" href="SubPages/Downs.html" target="_blank">Lista De Downloads</a>
 				<br>
-			<a style="color:red" href="https://discord.com/channels/766851219238944800/766851219238944802" target="_blank">Meu servidor de discord</a>
+		<a style="color:red" href="https://discord.com/channels/766851219238944800/766851219238944802" target="_blank">Meu servidor de discord</a>
 				<br>
-			<a style="color:red" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLCD0445C57F2B7F41" target="_blank">NÃO CLIQUE AQUI!</a>
+		<a style="color:red" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLCD0445C57F2B7F41" target="_blank">NÃO CLIQUE AQUI!</a>
 				<br>
-			<a style="color:grey"href="SubPages/nobari.html">No Bari</a>
-			<p style="color:cyan">Criado por YagoSP</p>
+		<a style="color:grey"href="SubPages/nobari.html">No Bari</a>
+		<p style="color:cyan">Criado por YagoSP</p>
 		</footer>
 </html>
