--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>HrefSystem</title>
 	</head>
 		
-	<body style="background-color:black">
+	<body style="background-color:black;">
 		<center>
 			<img src="images/hrefsystem.jpg" alt="imagem não encontrada!">
 		</center>
