--- a/SubPages/nobari.html
+++ b/SubPages/nobari.html
@@ -9,7 +9,7 @@
     <body style=" background-color:black";>
       <h1 style="color:grey"; align="center"> No bari uana ciuas tchu gueda, bari no meri nou</h1>
           <center>
-            <img src="images/nobari.jpg" alt="No bari uana ciuas tchu gueda, bari no meri nou!"> 
+            <img src="ihttps://imageproxy.ifunny.co/crop:x-20,resize:640x,quality:90x75/images/a92b9540da31cac9facedb3c95abf3f372b458e7db1b418bd987f26388118ec8_1.jpg" alt="No bari uana ciuas tchu gueda, bari no meri nou!"> 
           </center>
      </body>
   
