--- a/index.html
+++ b/index.html
@@ -6,21 +6,20 @@
 	</head>
 		
 	<body style="background-color:black;">
-		<iframe src="https://cache.gametracker.com/components/html0/?host=177.54.148.234:27310&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=1&currentPlayersHeight=100&showCurrPlayers=1&topPlayersHeight=100&showTopPlayers=1&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="536"></iframe>
 		<center>
 			<img src="images/hrefsystem.jpg" alt="imagem não encontrada!">
 		</center>
+		<iframe src="https://cache.gametracker.com/components/html0/?host=177.54.148.234:27310&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=1&currentPlayersHeight=100&showCurrPlayers=1&topPlayersHeight=100&showTopPlayers=1&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="536"></iframe>
 		<h1>Text de TEXT-2</h1>
 	</body>
 		
 	<footer>
-		<a style="color:cyan" href="SubPages/Downs.html" target="_blank">Lista De Downloads</a>
+		<a style="color:cyan" href="SubPages/Downs.html" target="_blank" align="right">Lista De Downloads</a>
 				<br>
-		<a style="color:red" href="https://discord.com/channels/766851219238944800/766851219238944802" target="_blank">Meu servidor de discord</a>
+		<a style="color:red" href="https://discord.gg/Au6KRS7MSk" target="_blank" align="right">Meu servidor de discord</a>
 				<br>
 		<a style="color:red" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLCD0445C57F2B7F41" target="_blank">NÃO CLIQUE AQUI!</a>
 				<br>
-		<a style="color:grey"href="SubPages/nobari.html">No Bari</a>
 		<p style="color:cyan">Criado por YagoSP</p>
 		</footer>
 </html>
