--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<center>
 			<img src="images/hrefsystem.jpg" alt="imagem não encontrada!">
 		</center>
-		<a href="https://www.gametracker.com/server_info/177.54.148.234:27310/" target="_blank"><img src="https://cache.gametracker.com/server_info/177.54.148.234:27310/b_350_20_692108_381007_ffffff_000000.png" border="0" width="350" height="20" alt=""/></a>
+		<a href="https://www.gametracker.com/server_info/177.54.148.234:27310/" target="_blank"><img src="https://cache.gametracker.com/server_info/177.54.148.234:27310/b_560_95_1.png" border="0" width="560" height="95" alt=""/></a>
 		<h1>Text de TEXT-2</h1>
 	</body>
 		
