--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	</body>
 		
 	<footer>
+		<a style="color:yellow" class="icon dir" href="https://pastebin.pl/" terget="_blank">Paste Bin</a>
 		<a style="color:cyan" href="SubPages/Downs.html" target="_blank">Lista De Downloads</a>
 				<br>
 		<a style="color:red" href="https://discord.gg/Au6KRS7MSk" target="_blank">Meu servidor de discord</a>
