--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="pt-br">
 		
 	<head>
-		<title>HrefSystem</title>
+		<meta charset="UTF-8">
+		<title>.:HrefSystem:.</title>
+		<link rel="sortcut icon" href="images/favicon.jpg" type="image/x-icon" />;
 	</head>
 		
 	<body style="background-color:black;">
@@ -14,7 +16,6 @@
 	</body>
 		
 	<footer>
-		<a style="color:yellow" class="icon dir" href="https://pastebin.pl/" terget="_blank">Paste Bin</a>
 		<a style="color:cyan" href="SubPages/Downs.html" target="_blank">Lista De Downloads</a>
 				<br>
 		<a style="color:red" href="https://discord.gg/Au6KRS7MSk" target="_blank">Meu servidor de discord</a>
@@ -22,5 +23,6 @@
 		<a style="color:red" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLCD0445C57F2B7F41" target="_blank">NÃO CLIQUE AQUI!</a>
 				<br>
 		<p style="color:cyan">Criado por YagoSP</p>
+		<p style="color:red;" align="center">Site em desenvolvimento!!
 		</footer>
 </html>
