--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>.:HrefSystem:.</title>
-		<link rel="sortcut icon" href="images/favicon.jpg" type="image/x-icon" />;
+		<link rel="sortcut icon" href="images/favicon.jpg" type="image/x-icon" />
 	</head>
 		
 	<body style="background-color:black;">
