--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>.:HrefSystem:.</title>
-		<link rel="sortcut icon" href="images/favicon.jpg" type="image/x-icon" />
+		<link rel="sortcut icon" href="images/favicon.jpg.png" type="image/x-icon" />
 	</head>
 		
 	<body style="background-color:black;">
@@ -23,6 +23,6 @@
 		<a style="color:red" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLCD0445C57F2B7F41" target="_blank">NÃO CLIQUE AQUI!</a>
 				<br>
 		<p style="color:cyan">Criado por YagoSP</p>
-		<p style="color:red;" align="center">Site em desenvolvimento!!
+		<p style="color:red;" align="center">Site em desenvolvimento!!</p>
 		</footer>
 </html>
