--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<body style="background-color:black;">
 		<center>
 			<img src="images/hrefsystem.jpg" alt="imagem não encontrada!">
+			<img src="images/costrucao1.png" alt="imagem não encontrada!">
 		</center>
-		<script src="//onlinegdb.com/embed/js/iorGoApWb?theme=dark"></script>
 	</body>
 		
 	<footer>
