--- a/index.html
+++ b/index.html
@@ -7,16 +7,13 @@
 		<link rel="sortcut icon" href="images/projeto.ico" type="image/x-icon" />
 	</head>
 		
-	<body style="background-color:black;">
+	<body>
 		<center>
 			<img src="images/hrefsystem.jpg" alt="imagem não encontrada!">
 		</center>
-	</body>
-		
-	<footer>
-		<a style="color:red" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLCD0445C57F2B7F41" target="_blank">NÃO CLIQUE AQUI!</a>
+		<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLCD0445C57F2B7F41">NÃO CLIQUE AQUI!</a>
 				<br>
-		<p style="color:cyan">Criado por YagoSP</p>
-		<p style="color:red;" align="center">Site em desenvolvimento!!</p>
-		</footer>
+		<p>Criado por YagoSP</p>
+		<p>Site em desenvolvimento!!</p>
+	</body>
 </html>
