--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>.:HrefSystem:.</title>
+		<link rel="stylesheet" type="text/css" href="style.css" />
 		<link rel="sortcut icon" href="images/projeto.ico" type="image/x-icon" />
 	</head>
 		
