--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<center>
 			<img src="images/hrefsystem.jpg" alt="imagem não encontrada!">
 		</center>
-		<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLCD0445C57F2B7F41">NÃO CLIQUE AQUI!</a>
+		<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLCD0445C57F2B7F41" target="blank">NÃO CLIQUE AQUI!</a>
 				<br>
 		<p>Criado por YagoSP</p>
 		<p>Site em desenvolvimento!!</p>
