--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 		<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLCD0445C57F2B7F41">NÃO CLIQUE AQUI!</a>
 				<br>
 		<p>Criado por YagoSP</p>
-		<p>Site em desenvolvimento!!</p>
+		<p>HTML</p>
 	</body>
 </html>
