--- a/index.html
+++ b/index.html
@@ -7,14 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="styles.css" />
 		<link rel="sortcut icon" href="images/projeto.ico" type="image/x-icon" />
 	</head>
-		
 	<body>
-		<center>
-			<img src="images/hrefsystem.jpg" alt="imagem não encontrada!">
-		</center>
-		<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLCD0445C57F2B7F41">NÃO CLIQUE AQUI!</a>
-				<br>
-		<p>Criado por YagoSP</p>
-		<p>HTML</p>
+		<p class="teste">!!HELLO WORLD!!</p>
 	</body>
 </html>
