--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-		
 	<head>
-		<meta charset="UTF-8">
-		<title>.:HrefSystem:.</title>
-		<link rel="stylesheet" type="text/css" href="styles.css" />
-		<link rel="sortcut icon" href="images/projeto.ico" type="image/x-icon" />
+		<meta charset="utf-8">
+		<link rel="stylesheet" href="css/style.css">
+		<link rel="sortcut icon" href="images/favicon.jpg">
 	</head>
+	
 	<body>
-		<p class="teste">!!HELLO WORLD!!</p>
+		<h1 class="title">Silerohc Room</h1> <!--Chorelis-->
+		<hr>
+		<p class="ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin fermentum sodales neque, quis consectetur lorem aliquam vulputate. Integer fringilla sem eu mollis tempus. Cras ante ex, viverra sit amet ipsum eu, venenatis tincidunt nisl. Vestibulum metus nulla, consectetur at aliquet eget, facilisis et tellus. Donec dapibus consequat eros at eleifend. Sed auctor aliquet nisl, ac ullamcorper metus malesuada nec. Donec vel molestie justo. Nulla facilisi. Nullam malesuada quis odio eget gravida. Quisque eget dignissim odio.
+
+Donec vestibulum risus neque, ac posuere enim molestie id. Nam faucibus felis vitae sem cursus pharetra. Nullam at dui ut velit viverra facilisis quis vel lorem. Quisque at mauris felis. Nunc tristique cursus est id mollis. Fusce ut purus libero. Nullam venenatis felis pulvinar, malesuada augue a, maximus ligula. Pellentesque et condimentum orci. Nullam hendrerit eros vel accumsan tristique. Proin eget magna et justo sagittis interdum. Quisque at ligula vitae ipsum dapibus interdum pharetra eget ante. Suspendisse consectetur augue at lectus pulvinar, ut porttitor nisl molestie. Integer luctus, dolor imperdiet malesuada interdum, elit arcu feugiat justo, et ullamcorper sem eros in mi. Nam sed purus id neque fringilla euismod.
+
+Suspendisse ullamcorper lacus et nisl feugiat blandit. Nulla at sodales purus. Proin euismod leo blandit rhoncus iaculis. Proin quis purus vitae odio convallis hendrerit ac vitae nisl. Aenean volutpat tempus pellentesque. Pellentesque condimentum, leo ut ultrices imperdiet, enim ante dapibus lectus, eu vehicula libero quam eget nulla. Sed dictum libero non commodo cursus. Aliquam tristique rhoncus diam, a molestie ligula semper in. Mauris pellentesque ipsum quis lorem lacinia consectetur porta non mi.</p>
+		<hr>
+		<a class="link1" href="https://www.lipsum.com/">Lorem Ipsum</a>
+		<br>
+		<a class="jisho" href="https://jisho.org/">Jisho (Japanese Dictionaty)</a>
 	</body>
 </html>
