--- a/subpages/page1.html
+++ b/subpages/page1.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8">
     <title>+Calc</title>
     <link rel="stylesheet" href="../css/page.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap" rel="stylesheet">
   </head>
   <body>
     <h1 class="title">Calculadora em JavaScript</h1>
@@ -13,5 +19,6 @@
 Com os lançamentos de seus quatro primeiros álbuns, os Metallica ganhou uma crescente base de fãs na comunidade de música underground, e alguns críticos dizem que Master of Puppets (1986) é um dos álbuns de thrash metal mais influentes e "pesados". Logo após, a banda alcançou enorme sucesso comercial com o seu álbum auto-intitulado de 1991 (também conhecido como The Black Album), que já vendeu 40 milhões de cópias pelo mundo até hoje.[3] Com este lançamento a banda expandiu seu direcionamento musical, atingindo uma audiência mais mainstream. Com os lançamentos de Load e Reload nos anos 1990, os Metallica tentaram aproximar-se do rock alternativo que fazia sucesso na época para ganhar uma nova base de fãs, mas foi acusada por seus fãs antigos de "vender-se" para as gravadoras. Em 2000 os Metallica estiveram entre os vários artistas que apresentaram uma ação judicial contra o Napster por compartilhar materiais protegidos por direitos de autor livremente sem o consentimento dos membros da banda.[4] A resolução foi tomada, e Napster se tornou um serviço de uso pago.
 
 Apesar de atingir o primeiro lugar na Billboard 200, o lançamento de St. Anger em 2003 foi controverso pelas influências de nu metal e a produção musical crua de Bob Rock. O disco sucessor, Death Magnetic (2008), foi produzido por Rick Rubin e recebeu avaliações mais favoráveis. Mais tarde, a discografia de estúdio do conjunto somou o álbum Lulu (2011), em parceria com Lou Reed e que recebeu críticas mistas. Em 2012, a banda fundou sua própria gravadora, chamada Blackened Recordings, e adquiriu os direitos de todos os seus álbuns de estúdio.[5] Seu disco mais recente é Hardwired...to Self-Destruct, lançado no fim de 2016. Em mais de 30 anos de carreira, os Metallica já lançaram dez álbuns de estúdio, quatro álbuns ao vivo, dez álbuns de vídeo, dentre outros. Tornaram-se uma das bandas mais influentes e bem sucedidas de todos os tempos, tendo vendido cerca de 200 milhões de discos no mundo inteiro.[6] A banda já recebeu nove premiações no Grammy Awards, entrou para o Rock and Roll Hall of Fame em 2009 e tem seis álbuns consecutivos em primeiro lugar na Billboard 200.[7]</p>
+    <script src="../scripts/calc.js"></script>
   </body>
 </html>
