--- a/index.html
+++ b/index.html
@@ -24,5 +24,7 @@ Suspendisse ullamcorper lacus et nisl feugiat blandit. Nulla at sodales purus. P
 		<a class="link1" href="https://www.lipsum.com/">Lorem Ipsum</a>
 		<br>
 		<a class="jisho" href="https://jisho.org/">Jisho (Japanese Dictionaty)</a>
+		<br>
+		<a class="page1" href="subpages/page1.html">+Calc</a>
 	</body>
 </html>
