--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="utf-8">
+		<title>Master</title>
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="sortcut icon" href="images/favicon.jpg">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
