--- a/subpages/page1.html
+++ b/subpages/page1.html
@@ -5,6 +5,7 @@
     <title>+Calc</title>
     <link rel="stylesheet" href="../css/page.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="sortcut icon" href="../images/favicon.png">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
