--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Suspendisse ullamcorper lacus et nisl feugiat blandit. Nulla at sodales purus. P
 		<hr>
 		<a class="link1" href="https://www.lipsum.com/">Lorem Ipsum</a>
 		<br
-		<a class="link2" href="subpages/pdf.html">Lista de PDFs</a>
+		<a class="link2" href="subpages/pdfs.html">Lista de PDFs</a>
 		<br>
 		<a class="jisho" href="https://jisho.org/">Jisho (Japanese Dictionary)</a>
 		<br>
