--- a/subpages/pdfs.html
+++ b/subpages/pdfs.html
@@ -8,9 +8,9 @@
   <body>
     <h1 class="title">Lista de PDFs</h1>
     <hr>
-     <a href="../pdf/logica.pdf">Lógica de programação</a>
-     <a href="../pdf/informatica_redes_de_computadores_2019.pdf">Redes de computadores-EEEP</a>
-     <a href="../pdf/MD_RedesdeComputadores.pdf">Redes de computadores-UFSM</a>
-     <a href="../pdf/manut_mont_comp.pdf">Manutenção e montagem de computadores</a>
+     <a class="l1" href="../pdf/logica.pdf">Lógica de programação</a>
+     <a class="l2" href="../pdf/informatica_redes_de_computadores_2019.pdf">Redes de computadores-EEEP</a>
+     <a class="l3" href="../pdf/MD_RedesdeComputadores.pdf">Redes de computadores-UFSM</a>
+     <a class="l4" href="../pdf/manut_mont_comp.pdf">Manutenção e montagem de computadores</a>
   </body>
 </html>
