--- a/subpages/pdfs.html
+++ b/subpages/pdfs.html
@@ -13,5 +13,6 @@
      <a class="l3" href="../pdf/MD_RedesdeComputadores.pdf">Redes de computadores-UFSM</a>
      <a class="l4" href="../pdf/manut_mont_comp.pdf">Manutenção e montagem de computadores</a>
      <a class="l5" href="../pdf/apostila-html-css-javascript.pdf">Estruturação de páginas usando HTML e CSS</a>
+    <a class="l6" href="../pdf/Assembly.pdf">Programando em Assembly</a>
   </body>
 </html>
