--- a/subpages/pdfs.html
+++ b/subpages/pdfs.html
@@ -4,6 +4,9 @@
     <title>List</title>
     <link rel="sortcut icon" href="../images/favicon.png">
     <link rel="stylesheet" href="../css/pdfs.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Changa:wght@200&display=swap" rel="stylesheet">
   </head>
   <body>
     <h1 class="title">Lista de PDFs</h1>
