--- a/subpages/pdfs.html
+++ b/subpages/pdfs.html
@@ -16,6 +16,8 @@
      <a class="l3" href="../pdf/MD_RedesdeComputadores.pdf">Redes de computadores-UFSM</a>
      <a class="l4" href="../pdf/manut_mont_comp.pdf">Manutenção e montagem de computadores</a>
      <a class="l5" href="../pdf/apostila-html-css-javascript.pdf">Estruturação de páginas usando HTML e CSS</a>
-    <a class="l6" href="../pdf/Assembly.pdf">Programando em Assembly</a>
+     <a class="l6" href="../pdf/Assembly.pdf">Programando em Assembly</a>
+     <a class="l7" href="../pdf/AsmNasm.pdf">Assembly na prática</a>
+     <a class="l8" href="../pdf/Assembly x86 NASM.pdf">Assembly x86</a>
   </body>
 </html>
