--- a/subpages/pdfs.html
+++ b/subpages/pdfs.html
@@ -19,5 +19,7 @@
      <a class="l6" href="../pdf/Assembly.pdf">Programando em Assembly</a>
      <a class="l7" href="../pdf/AsmNasm.pdf">Assembly na prática</a>
      <a class="l8" href="../pdf/Assembly x86 NASM.pdf">Assembly x86</a>
+    <a class="l9" href="../pdf/progcbasic.pdf">Programação Básica em C</a>
+     <hr>
   </body>
 </html>
