--- a/subpages/pdfs.html
+++ b/subpages/pdfs.html
@@ -7,6 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Changa:wght@200&display=swap" rel="stylesheet">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4545706743756353"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <h1 class="title">Lista de PDFs</h1>
