--- a/index.html
+++ b/index.html
@@ -29,5 +29,7 @@ Suspendisse ullamcorper lacus et nisl feugiat blandit. Nulla at sodales purus. P
 		<a class="jisho" href="https://jisho.org/">Jisho (Japanese Dictionary)</a>
 		<br>
 		<a class="page1" href="subpages/page1.html">+Calc</a>
+		<br>
+		<p>All work and no play makes Jack a dull boy.</p>
 	</body>
 </html>
