--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@ Suspendisse ullamcorper lacus et nisl feugiat blandit. Nulla at sodales purus. P
 		<br>
 		<a class="page1" href="subpages/page1.html">+Calc</a>
 		<br>
+		<a class="gore" href="subpages/gore.html">GORE...+18</a>
+		<br>
 		<p>All work and no play makes Jack a dull boy.</p>
 	</body>
 </html>
