--- a/subpages/gore.html
+++ b/subpages/gore.html
@@ -7,7 +7,13 @@
   <body style="background-color:black;">
     <h1 style="color:red;" align="center">GORE IMAGES</h1>
     <center>
-      <img src="https://img.ifunny.co/images/c6edfd558d8ae425898b374dd8f048e70e0a93c3ecfd8c43d12ed40c3e8e6297_1.jpg" align="center" alt="madrugagore.jpg">
+      <img src="https://img.ifunny.co/images/c6edfd558d8ae425898b374dd8f048e70e0a93c3ecfd8c43d12ed40c3e8e6297_1.jpg" alt="madrugagore.jpg">
+      <br>
+      <img src="https://img.ifunny.co/images/b78902a9f675bcfe804f792d5660c0034f880cd1537d3127016a8ba4a24ee345_1.jpg" alt="goremm1.jpg">
+      <br>
+      <img src="https://img.ifunny.co/images/08de385a6b4782734e31c3ecf9f73c1f420efada4ad89bfc41c8cb3a595a3873_1.jpg" alt="kiwigore.jpg">
+      <br>
+      <img
     </center> 
   </body>
 </html>
