--- a/index.html
+++ b/index.html
@@ -33,5 +33,8 @@ Suspendisse ullamcorper lacus et nisl feugiat blandit. Nulla at sodales purus. P
 		<a class="gore" href="subpages/gore.html">GORE...+18</a>
 		<br>
 		<p>All work and no play makes Jack a dull boy.</p>
+		<br>
+		<br>
+		<p>Online desde 1/11/2019
 	</body>
 </html>
