--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@ Suspendisse ullamcorper lacus et nisl feugiat blandit. Nulla at sodales purus. P
 		<p>All work and no play makes Jack a dull boy.</p>
 		<br>
 		<br>
-		<p>Online desde 1/11/2019
+		<p>Online desde 1/11/2019</p>
 	</body>
 </html>
