--- a/index.html
+++ b/index.html
@@ -21,20 +21,17 @@
 Donec vestibulum risus neque, ac posuere enim molestie id. Nam faucibus felis vitae sem cursus pharetra. Nullam at dui ut velit viverra facilisis quis vel lorem. Quisque at mauris felis. Nunc tristique cursus est id mollis. Fusce ut purus libero. Nullam venenatis felis pulvinar, malesuada augue a, maximus ligula. Pellentesque et condimentum orci. Nullam hendrerit eros vel accumsan tristique. Proin eget magna et justo sagittis interdum. Quisque at ligula vitae ipsum dapibus interdum pharetra eget ante. Suspendisse consectetur augue at lectus pulvinar, ut porttitor nisl molestie. Integer luctus, dolor imperdiet malesuada interdum, elit arcu feugiat justo, et ullamcorper sem eros in mi. Nam sed purus id neque fringilla euismod.
 
 Suspendisse ullamcorper lacus et nisl feugiat blandit. Nulla at sodales purus. Proin euismod leo blandit rhoncus iaculis. Proin quis purus vitae odio convallis hendrerit ac vitae nisl. Aenean volutpat tempus pellentesque. Pellentesque condimentum, leo ut ultrices imperdiet, enim ante dapibus lectus, eu vehicula libero quam eget nulla. Sed dictum libero non commodo cursus. Aliquam tristique rhoncus diam, a molestie ligula semper in. Mauris pellentesque ipsum quis lorem lacinia consectetur porta non mi.</p>
-		<hr>
-		<a class="link1" href="https://www.lipsum.com/">Lorem Ipsum</a>
-		<br>
-		<a class="pdfpage" href="subpages/pdfs.html">Lista de PDFs</a>
-		<br>
-		<a class="jisho" href="https://jisho.org/">Jisho (Japanese Dictionary)</a>
-		<br>
-		<a class="page1" href="subpages/page1.html">+Calc</a>
-		<br>
-		<a class="gore" href="subpages/gore.html">GORE...+18</a>
-		<br>
-		<p>All work and no play makes Jack a dull boy.</p>
-		<br>
-		<br>
+		<div class="links">
+			<a href="https://www.lipsum.com/">Lorem Ipsum</a>
+			<br>
+			<a href="subpages/pdfs.html">Lista de PDFs</a>
+			<br>
+			<a href="https://jisho.org/">Jisho (Japanese Dictionary)</a>
+			<br>
+			<a href="subpages/page1.html">+Calc</a>
+			<br>
+			<a href="subpages/gore.html">GORE...+18</a>
+		</div>
 		<p>Online desde 1/11/2020</p>
 	</body>
 </html>
