--- a/subpages/pdfs.html
+++ b/subpages/pdfs.html
@@ -19,7 +19,8 @@
      <a class="l6" href="../pdf/Assembly.pdf">Programando em Assembly</a>
      <a class="l7" href="../pdf/AsmNasm.pdf">Assembly na prática</a>
      <a class="l8" href="../pdf/Assembly x86 NASM.pdf">Assembly x86</a>
-    <a class="l9" href="../pdf/progcbasic.pdf">Programação Básica em C</a>
+     <a class="l9" href="../pdf/progcbasic.pdf">Programação Básica em C</a>
+    <a class="20" href="../pdf/1429885481_ARQUIVO_nadsat.pdf">Nadsat</a>
      <hr>
   </body>
 </html>
