--- a/subpages/pdfs.html
+++ b/subpages/pdfs.html
@@ -21,6 +21,7 @@
      <a class="l8" href="../pdf/Assembly x86 NASM.pdf">Assembly x86</a>
      <a class="l9" href="../pdf/progcbasic.pdf">Programação Básica em C</a>
     <a class="l2a" href="../pdf/1429885481_ARQUIVO_nadsat.pdf">Nadsat</a>
+    <a class="l3a" href="../pdf/minna_no_nihongo.pdf">Minna No Nihonhgo</a>
      <hr>
   </body>
 </html>
