--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>Master</title>
 		<link rel="stylesheet" href="css/style.css">
-		<link rel="sortcut icon" href="images/favicon.png">
+		<link rel="sortcut icon" href="images/favicon2.jpg">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
