--- a/subpages/gore.html
+++ b/subpages/gore.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8">
-    <link rel="sortcut icon" href="../images/favicon2.jpg">
+    <link rel="sortcut icon" href="../images/favicon2.jpeg">
     <title>.:GORE:.</title>
   </head>
   <body style="background-color:black;">
