--- a/subpages/pdfs.html
+++ b/subpages/pdfs.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <title>List</title>
-    <link rel="sortcut icon" href="../images/favicon2.jpg">
+    <link rel="sortcut icon" href="../images/favicon2.jpeg">
     <link rel="stylesheet" href="../css/pdfs.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
