--- a/subpages/pdfs.html
+++ b/subpages/pdfs.html
@@ -22,6 +22,7 @@
      <a class="l9" href="../pdf/progcbasic.pdf">Programação Básica em C</a>
     <a class="l2a" href="../pdf/1429885481_ARQUIVO_nadsat.pdf">Nadsat</a>
     <a class="l3a" href="../pdf/minna_no_nihongo.pdf">Minna No Nihonhgo</a>
+    <a class="l4a" href="..//pdf/vim_basico.pdf">Comandos Basicos VIm</a>
      <hr>
   </body>
 </html>
