--- a/subpages/pdfs.html
+++ b/subpages/pdfs.html
@@ -23,7 +23,7 @@
     <a class="l2a" href="../pdf/1429885481_ARQUIVO_nadsat.pdf">Nadsat</a>
     <a class="l3a" href="../pdf/minna_no_nihongo.pdf">Minna No Nihonhgo</a>
     <a class="l4a" href="..//pdf/vim_basico.pdf">Comandos Basicos VIm</a>
-    <a class="l5a" href="../pdf/projeto.pdf">Projeto Integrador (Assistente de operações em redes de computadores Senac) (28/06/2023) (F)</a>
+    <a class="l5a" href="../pdf/Comandos_para_configuracao_de_Switch.pdf">Comandos para configuração de switch (CISCO)</a>
     <hr>
   </body>
 </html>
