--- a/subpages/pdfs.html
+++ b/subpages/pdfs.html
@@ -24,6 +24,8 @@
     <a class="l3a" href="../pdf/minna_no_nihongo.pdf">Minna No Nihonhgo</a>
     <a class="l4a" href="..//pdf/vim_basico.pdf">Comandos Basicos VIm</a>
     <a class="l5a" href="../pdf/Comandos_para_configuracao_de_Switch.pdf">Comandos para configuração de switch (CISCO)</a>
+    <a class="l6a" href="../pdf/TROUBLESHOOTING.pdf">Troubleshooting de Redes</a>
+    
     <hr>
   </body>
 </html>
