--- a/subpages/pdfs.html
+++ b/subpages/pdfs.html
@@ -25,7 +25,7 @@
     <a class="l4a" href="..//pdf/vim_basico.pdf">Comandos Basicos VIm</a>
     <a class="l5a" href="../pdf/Comandos_para_configuracao_de_Switch.pdf">Comandos para configuração de switch (CISCO)</a>
     <a class="l6a" href="../pdf/TROUBLESHOOTING.pdf">Troubleshooting de Redes</a>
-    
+    <a class="l7a" href="../ṕdf/Comandos_para_configurar_roteadores.pdf">Comandos para configurar roteadores (CISCO)</a>
     <hr>
   </body>
 </html>
