--- a/subpages/pdfs.html
+++ b/subpages/pdfs.html
@@ -27,6 +27,7 @@
     <a class="l6a" href="../pdf/TROUBLESHOOTING.pdf">Troubleshooting de Redes</a>
     <a class="l7a" href="../pdf/Comandos_para_configurar_roteadores.pdf">Comandos para configurar roteadores (CISCO)</a>
     <a class="l8a" href="../pdf/A Arte De Enganar - Kevin D. Mitnick.pdf">A Arte De Enganar - Kevin D. Mitnick</a>
+    <a class="l9a" href="../pdf/linuxbasicsforhackers.pdf">Linux Basics for Hackers</a>
     <hr>
   </body>
 </html>
