--- a/subpages/onion.html
+++ b/subpages/onion.html
@@ -1,1 +1,11 @@
-  
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Onion lINKS</title>
+    <meta charset="utf-8">
+  </head>
+  <body style="background-color:black;">
+    <h1 style="color></h1>
+  </body>
+</html>
+
