--- a/subpages/onion.html
+++ b/subpages/onion.html
@@ -13,7 +13,7 @@
   <body style="background-color:#03010f;">
 	  <h1 align="center" class="title">Onion Links</h1>
 	  <div class="sidebar">
-		  <img style="padding:10px;" src="globe.gif" height="180px" width="180px" alt="globe.gif">
+		  <img style="padding:10px;" src="../images/globe.gif" height="180px" width="180px" alt="globe.gif">
 		  <a href="https://www.torproject.org/download/" target="_blank">Link Oficial do TOR</a>
 		  <p>Se for usar a rede tor, tome cuidado! Não baixe nada, não passe senhas, não clique em qualquer coisa.</p>
 	  </div>
