--- a/subpages/onion.html
+++ b/subpages/onion.html
@@ -3,6 +3,7 @@
   <head>
     <title>Onion lINKS</title>
     <meta charset="utf-8">
+    <link rel="sortcut icon" href="../images/favicon2.jpeg">
     <link rel="stylesheet" href="../css/onion.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
