--- a/subpages/onion.html
+++ b/subpages/onion.html
@@ -18,6 +18,7 @@
 		  <img style="padding:10px;" src="../images/globe.gif" height="180px" width="180px" alt="globe.gif">
 		  <a href="https://www.torproject.org/download/" target="_blank">Link Oficial do TOR</a>
 		  <p>Se for usar a rede tor, tome cuidado! Não baixe nada, não passe senhas, não clique em qualquer coisa.</p>
+	  	  <a href="https://yagosp.github.io">Home</a>
 	  </div>
 	  <br>
 	  <p>WeirdLog</p>
