--- a/subpages/onion.html
+++ b/subpages/onion.html
@@ -35,6 +35,8 @@
 	  <a href="http://zqktlwiuavvvqqt4ybvgvi7tyo4hjl5xgfuvpdf6otjiycgwqbym2qad.onion/wiki/index.php/Main_Page">http://zqktlwiuavvvqqt4ybvgvi7tyo4hjl5xgfuvpdf6otjiycgwqbym2qad.onion/wiki/index.php/Main_Page</a>
  	  <p>TorLinks</p>
 	  <a href="http://torlinksge6enmcyyuxjpjkoouw4oorgdgeo7ftnq3zodj7g2zxi3kyd.onion/">http://torlinksge6enmcyyuxjpjkoouw4oorgdgeo7ftnq3zodj7g2zxi3kyd.onion/</a>
+ 	  <p>Freedom Hosting</p>
+	  <a href="http://fhostingineiwjg6cppciac2bemu42nwsupvvisihnczinok362qfrqd.onion/">http://fhostingineiwjg6cppciac2bemu42nwsupvvisihnczinok362qfrqd.onion/</a>
   </body>
 
 
