--- a/subpages/onion.html
+++ b/subpages/onion.html
@@ -37,6 +37,8 @@
 	  <a href="http://torlinksge6enmcyyuxjpjkoouw4oorgdgeo7ftnq3zodj7g2zxi3kyd.onion/">http://torlinksge6enmcyyuxjpjkoouw4oorgdgeo7ftnq3zodj7g2zxi3kyd.onion/</a>
  	  <p>Freedom Hosting</p>
 	  <a href="http://fhostingineiwjg6cppciac2bemu42nwsupvvisihnczinok362qfrqd.onion/">http://fhostingineiwjg6cppciac2bemu42nwsupvvisihnczinok362qfrqd.onion/</a>
+	  <p>Breach Forum</p>
+	  <a href="http://breached26tezcofqla4adzyn22notfqwcac7gpbrleg4usehljwkgqd.onion/search?action=getdaily">http://breached26tezcofqla4adzyn22notfqwcac7gpbrleg4usehljwkgqd.onion/search?action=getdaily</a>
   </body>
 
 
