--- a/subpages/pdfs.html
+++ b/subpages/pdfs.html
@@ -28,6 +28,7 @@
     <a class="l7a" href="../pdf/Comandos_para_configurar_roteadores.pdf">Comandos para configurar roteadores (CISCO)</a>
     <a class="l8a" href="../pdf/A Arte De Enganar - Kevin D. Mitnick.pdf">A Arte De Enganar - Kevin D. Mitnick</a>
     <a class="l9a" href="../pdf/linuxbasicsforhackers.pdf">Linux Basics for Hackers</a>
+    <a class="l1b" href="../pdf/aartedeabrircadeados.pdf">A Arte de Abrir Cadeados</a>
     <hr>
   </body>
 </html>
