--- a/subpages/pdfs.html
+++ b/subpages/pdfs.html
@@ -29,6 +29,7 @@
     <a class="l8a" href="../pdf/A Arte De Enganar - Kevin D. Mitnick.pdf">A Arte De Enganar - Kevin D. Mitnick</a>
     <a class="l9a" href="../pdf/linuxbasicsforhackers.pdf">Linux Basics for Hackers</a>
     <a class="l1b" href="../pdf/aartedeabrircadeados.pdf">A Arte de Abrir Cadeados</a>
+    <a class="l2b" href="../pdf/phishing.pdf">Manual do 7 (esqueça!!!)</a>
     <hr>
   </body>
 </html>
